Bug 420895 - Files view rooted at $HOME; cannot be used to browse alternative locations
Summary: Files view rooted at $HOME; cannot be used to browse alternative locations
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.3
Platform: Kubuntu Linux
: HI normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: usability
: 422235 426262 430106 436426 437316 441246 459439 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-02 11:58 UTC by Sigurd Schmidt
Modified: 2022-09-20 16:34 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments
Signature SFS Web_2004240.png (93.32 KB, image/png)
2020-05-08 16:38 UTC, Sigurd Schmidt
Details
Signature SFS Web_2004240.png (93.32 KB, image/png)
2020-05-09 09:34 UTC, Sigurd Schmidt
Details
Elisa 1.png (80.47 KB, image/png)
2020-05-09 09:34 UTC, Sigurd Schmidt
Details
Elisa 2.png (388.77 KB, image/png)
2020-05-09 09:34 UTC, Sigurd Schmidt
Details
Signature SFS Web_2004240.png (93.32 KB, image/png)
2020-05-11 19:36 UTC, Sigurd Schmidt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sigurd Schmidt 2020-05-02 11:58:04 UTC
I cannot change the path of the music files when I would like to choose a song by the file of it.


STEPS TO REPRODUCE
1. Go to file on the main window and click on it
2. You can see now the path of the files.
3. You cannot edit this path at all.

OBSERVED RESULT


EXPECTED RESULT
I can change the path to the folder where I have my music stored.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.18.4
(available in About System)
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-05-07 14:14:25 UTC
Click on The hamburger/three bars menu in the top-right corner area of the window , choose "Configure Elisa..." and then add the desired additional paths.
Comment 2 Sigurd Schmidt 2020-05-08 16:38:28 UTC
Created attachment 128259 [details]
Signature SFS Web_2004240.png

Dear Sir or Madam,

Of course you can change the path in the configuration. But click afterwards on "Files" in the left column. You will now in the middle see the word "Files" and below still the wrong path. The change
in the configuration has no influence on this. I still cannot change the path for the files.


-------- Forwarded Message --------
From: Nate Graham <bugzilla_noreply@kde.org>
Reply-To: bug-control@kde.org
To: sigurdfschmidt@web.de
Subject: [elisa] [Bug 420895] Wrong path for music files
Date: Thu, 07 May 2020 14:14:25 +0000

https://bugs.kde.org/show_bug.cgi?id=420895

Nate Graham <nate@kde.org> changed:
           What    |Removed                     |Added--------------------------------------------------------------------------
--             Status|REPORTED                    |RESOLVED         Resolution|---                         |WORKSFORME                 CC|                            |nate@kde.org

--- Comment #1 from Nate Graham <nate@kde.org> ---Click on The hamburger/three bars menu in the top-right corner area of thewindow , choose "Configure Elisa..." and then add the desired additional
paths.
-- You are receiving this mail because:You reported the bug.
Kind regards
Dipl.-Ing. Sigurd F. Schmidt
Comment 3 Nate Graham 2020-05-08 17:40:48 UTC
Hm, that's not what I see. Can you attach a screenshot (or better yet, a screen recording) that illustrates the problem?
Comment 4 Sigurd Schmidt 2020-05-09 09:34:58 UTC
Created attachment 128274 [details]
Signature SFS Web_2004240.png

Dear Mr. Graham,
Please find attached two screenshots. I am usin three hard drives. One is only for the Os and all software, One is for my files and the third is the backup drive. Screenshot Elisa 1 shows the
configuration for the hard drive of my files with the place of my music. But on screenshot Elisa 2 you can see the preinstalled path for music. No music is recognized at all because there is no music.
Even the folder does not exist. The new path in the configuration does not change anything.
Kind regards,Dipl.-Ing. Sigurd F. Schmidt
On Fri, 2020-05-08 at 17:40 +0000, Nate Graham wrote:
> https://bugs.kde.org/show_bug.cgi?id=420895
>
> --- Comment #3 from Nate Graham <nate@kde.org> ---Hm, that's not what I see. Can you attach a screenshot (or better yet, a screenrecording) that illustrates the problem?
Comment 5 Sigurd Schmidt 2020-05-09 09:34:59 UTC
Created attachment 128275 [details]
Elisa 1.png
Comment 6 Sigurd Schmidt 2020-05-09 09:34:59 UTC
Created attachment 128276 [details]
Elisa 2.png
Comment 7 Nate Graham 2020-05-11 13:19:15 UTC
Thanks, that's very helpful. I can reproduce now. Marking as high priority since this makes the files view largely useless for the typical purpose of browsing to find music *not* in the location where you've configured your library (e.g. a flash drive, intermittently-available network share, etc).
Comment 8 Matthieu Gallien 2020-05-11 16:23:11 UTC
(In reply to Nate Graham from comment #7)
> Thanks, that's very helpful. I can reproduce now. Marking as high priority
> since this makes the files view largely useless for the typical purpose of
> browsing to find music *not* in the location where you've configured your
> library (e.g. a flash drive, intermittently-available network share, etc).

I had planned to fix that as part of https://invent.kde.org/kde/elisa/-/merge_requests/121 but I do not know what to do UI wise.

Do you have suggestions ?
Comment 9 Sigurd Schmidt 2020-05-11 19:36:18 UTC
Created attachment 128371 [details]
Signature SFS Web_2004240.png

Hi,I am using Kubuntu 19.10. I got Elisa via the Kubuntu repository (version 0.4.2). If you can send me a debian package of Elisa with the fixed bug, I can try it.
Kind regardsSigurd F. Schmidt
On Mo, 2020-05-11 at 16:23 +0000, Matthieu Gallien wrote:
> https://bugs.kde.org/show_bug.cgi?id=420895
>
> --- Comment #8 from Matthieu Gallien <matthieu_gallien@yahoo.fr> ---(In reply to Nate Graham from comment #7)
> > Thanks, that's very helpful. I can reproduce now. Marking as high prioritysince this makes the files view largely useless for the typical purpose ofbrowsing to find music *not* in the location
> > where you've configured yourlibrary (e.g. a flash drive, intermittently-available network share, etc).
>
> I had planned to fix that as part ofhttps://invent.kde.org/kde/elisa/-/merge_requests/121 but I do not know what todo UI wise.
> Do you have suggestions ?
Comment 10 Nate Graham 2020-06-10 22:38:58 UTC
*** Bug 422235 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2020-09-08 13:05:17 UTC
*** Bug 426262 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2020-12-07 17:31:09 UTC
*** Bug 430106 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2021-05-03 19:54:12 UTC
*** Bug 436426 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2021-05-19 02:04:04 UTC
*** Bug 437316 has been marked as a duplicate of this bug. ***
Comment 15 Nate Graham 2021-08-20 19:42:23 UTC
*** Bug 441246 has been marked as a duplicate of this bug. ***
Comment 16 Roman Lebedev 2022-06-01 21:06:48 UTC
I've posted https://invent.kde.org/multimedia/elisa/-/merge_requests/360
I don't know if there is some nicer solution that is planned,
but at least this makes elisa usable for me :)
Comment 17 Nate Graham 2022-06-02 14:28:03 UTC
Git commit 285fbb5726442fd3a259d9686b0e68b74b59380b by Nate Graham, on behalf of Roman Lebedev.
Committed on 02/06/2022 at 14:27.
Pushed by ngraham into branch 'master'.

Change root of Files view to root directory

Currently the "Files" view is rooted in `~`, and you can not step out of
that directory. This is problematic because it hardcodes an assumption
that everything everyone would want to access is within that directory.
FIXED-IN: 22.08

M  +1    -1    src/viewslistdata.cpp

https://invent.kde.org/multimedia/elisa/commit/285fbb5726442fd3a259d9686b0e68b74b59380b
Comment 18 Patrick Silva 2022-09-20 16:34:04 UTC
*** Bug 459439 has been marked as a duplicate of this bug. ***