Change root of Files view to root directory

Currently the "Files" view is rooted in `~`, and you can not step out of
that directory. This is problematic because it hardcodes an assumption
that everything everyone would want to access is within that directory.

BUG: 420895
FIXED-IN: 22.08